<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>afd_hw</name>
  <version>0.1.0</version>
  <description>AFD hardware interface for ros2control</description>
  <maintainer email="peytonweisbeck1@gmail.com">Peyton Weisbeck</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>yaml-cpp</depend>
  <depend>asio</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_description_file>afd_hw/afd_hardware_interface.xml</pluginlib>
  </export>
</package>
