<package format="3">
  <name>afd_hw</name>
  <version>0.1.0</version>
  <description>AFD Hardware Driver for ros2_control</description>

  <maintainer email="peytonweisbeck1@gmail.com">Peyton Weisbeck</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>yaml-cpp</depend>
  <depend>rviz_common</depend>

  <!-- Boost dependency -->
  <depend>libboost-dev</depend>
  <depend>libboost-system-dev</depend>

  <!-- Qt dependencies -->
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qttools5-dev</build_depend>
  <build_depend>libqt5charts5-dev</build_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>qttools5-dev</exec_depend>
  <exec_depend>libqt5charts5-dev</exec_depend>

  <!-- Export pluginlib configurations -->
  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin_description_file="afd_hw_interface.xml"/>
    <pluginlib plugin_description_file="src/rviz/plugins.xml"/>
  </export>
</package>
